Made new achievements and about us pages separate

--- a/Pages/Whypickus.html
+++ b/Pages/Whypickus.html
@@ -8,41 +8,54 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/Assets/CSS/Homepage.css">
-    <link rel="stylesheet" href="/Assets/CSS/abus.css">
+    <link rel="stylesheet" href="/Assets/CSS/whypickus.css">
     <link rel="stylesheet" href="/Assets/CSS/Template.css" />
-    <script src="/JavaScript/include.js" defer></script>
-    <script src="/JavaScript/fadein.js" defer></script>
-    <title>About Us | Level Up Institute</title>
+    <script src="/JavaScript/include.js" defer></script> 
+    <title>Why Pick Us? | Level Up Institute</title>
   </head>
 
   <body>
     <div data-include="/Includes/nav.html"></div> 
 
-    <section class="about">
-    
-      <div class="container">
-        <img src="/Assets/Images/About Us2.jpg" class="img1" />
-        <div class="items">
-          <h1>About Us</h1>
-          <p>
-            Starting in September 2023, Level Up started as a means to help
-            people in Blessington, Wicklow and the surrounding area with
-            Maths and Science. Science is something we are passionate about, the goal of
-            Level Up is to help other people in their respective journey in
-            Maths and Science and spread our passion of to others!
-            <a href="#"><i class="bx bxl-instagram"></i></a>
-            <a href="#"><i class="bx bxl-youtube"></i></a>
-          </p>
-          
-          <div class="studentreviews">
-            <a class="link-with-icon" href="/Pages/ReviewsRecom.html"
-              >See Our Reviews and Recommendations
-              <i class="bx bx-chevron-right"></i
-            ></a>
-            <a href="/Pages/congrind.html">Book a Grind Now!</a>
-          </div>  
+    <section class="achievements">
+      <div class="items">
+        <h1>Achievements and Feedback</h1>
+        <div class="cards">
+          <article class="card">
+            <span class="icon">
+              <i class="bx bx-trending-up"></i>
+            </span>
+            <h3>Improved Test Results</h3>
+            <p>
+              80% of Students received higher test scores within 6 weeks of
+              Grinds.
+            </p>
+          </article>
+          <article class="card">
+            <span class="icon">
+              <i class="bx bx-happy-beaming"></i>
+            </span>
+            <h3>High Satisfaction Rate</h3>
+            <p>We Strive to Make Sure our Students feel Supported and Satisfied.</p>
+          </article>
+          <article class="card">
+            <span class="icon">
+              <i class="bx bx-conversation"></i>
+            </span>
+            <h3>Personalised Learning Success</h3>
+            <p>
+              Each Grind is Specifically tailored towards the Goals of Each
+              Student.
+            </p>
+          </article>
         </div>
-        <img src="/Assets/Images/Achievements page.png" class="img2" />
+        <div class="studentreviews">
+          <a class="link-with-icon" href="/Pages/ReviewsRecom.html"
+            >See Our Reviews and Recommendations
+            <i class="bx bx-chevron-right"></i
+          ></a>
+          <a href="/Pages/congrind.html">Book a Grind Now!</a>
+        </div>  
       </div>
     </section>
 
