--- a/Pages/congrind.html
+++ b/Pages/congrind.html
@@ -30,8 +30,11 @@
           <p class="">The First Grind with us is Completely FREE!</p>
           <p class="bottom">Still unsure about Booking?</p>
           <div class="buttons">
-            <button onclick="window.location.href='/Pages/About Us.html'">
-              <a href="/Pages/About Us.html">Why Pick Us?</a>
+            <button onclick="window.location.href='/Pages/wpu.html'">
+              <a href="/Pages/wpu.html">Why Pick Us?</a>
+            </button>
+            <button onclick="window.location.href='/Pages/ReviewsRecom.html'">
+              <a href="/Pages/ReviewsRecom.html">Reviews & Recommendations</a>
             </button>
             <button onclick="window.location.href='/Pages/bookagrind.html'">
               <a href="/Pages/bookagrind.html">About the Tutors</a>
@@ -59,7 +62,8 @@
             />
           </div>
           <input
-            type="email"
+            type="email"  font-size: l;
+
             name="Email Address"
             placeholder="Your Email Address"
             required
