--- a/Pages/index.html
+++ b/Pages/index.html
@@ -43,7 +43,7 @@
               <a href="/Pages/Courses.html">See Courses</a>
             </button>
             <button onclick="window.location.href='/Pages/About Us.html'">
-              <a href="/Pages/About Us.html">Why Pick Us?</a>
+              <a href="/Pages/wpu.html">Why Pick Us?</a>
             </button>
           </div>
           <!-- <div class="search">
