--- a/Pages/Blog Pages/Landing Page.html
+++ b/Pages/Blog Pages/Landing Page.html
@@ -64,7 +64,7 @@
               ></a>
             </div>
           </div> -->
-          <!-- <div class="item">
+          <div class="item">
             <div class="top">
               <img src="/Assets/Images/Study Tips.jpg" />
               <h5>Studying tips for All Students</h5>
@@ -75,7 +75,7 @@
                 >Read More <i class="bx bx-chevron-right"></i
               ></a>
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
 
