--- a/Pages/index.html
+++ b/Pages/index.html
@@ -362,7 +362,7 @@
             ></a>
           </div>
         </div> -->
-        <!-- <div class="item">
+        <div class="item">
           <div class="top">
             <img src="/Assets/Images/Study Tips.jpg" />
             <h5>Studying tips for All Students</h5>
@@ -373,7 +373,7 @@
               >Read More <i class="bx bx-chevron-right"></i
             ></a>
           </div>
-        </div> -->
+        </div>
       </div>
     </div>
 
