Fixed Media screen sizes

--- a/Pages/Aboutus.html
+++ b/Pages/Aboutus.html
@@ -30,8 +30,8 @@
             Maths and Science. Science is something we are passionate about, the goal of
             Level Up is to help other people in their respective journey in
             Maths and Science and spread our passion of to others!
-            <a href="#"><i class="bx bxl-instagram"></i></a>
-            <a href="#"><i class="bx bxl-youtube"></i></a>
+            <!-- <a href="#"><i class="bx bxl-instagram"></i></a>
+            <a href="#"><i class="bx bxl-youtube"></i></a> -->
           </p>
           
           <div class="studentreviews">
