--- a/Pages/Blog Pages/Landing Page.html
+++ b/Pages/Blog Pages/Landing Page.html
@@ -71,7 +71,7 @@
             </div>
             <div class="bottom">
               <h5><span>Science Based</span> Tips</h5>
-              <a href="/Pages/Blog Pages/Study Tips.html"
+              <a href="#"
                 >Read More <i class="bx bx-chevron-right"></i
               ></a>
             </div>
