--- a/Pages/Contact Us.html
+++ b/Pages/Contact Us.html
@@ -27,22 +27,21 @@
             hours!
           </p>
           <ul class="contact__details">
-            <li>
+            <!-- <li>
               <i class="bx bxs-phone"></i>
               <h5>+353 851193536</h5>
+            </li> -->
+            <li>
+              <i class="bx bx-envelope"></i><h5>eoghanmurphy24@proton.me</h5>
             </li>
             <li>
-              <i class="bx bx-envelope"></i>
-              <h5 class="email">eoghanmurphy24@proton.me</h5>
-            </li>
-            <li>
-              <i class="bx bx-map"></i>Blessington, Wicklow, Ireland.
+              <i class="bx bx-map"></i> <h5>Blessington, Wicklow, Ireland.</h5>
             </li>
           </ul>
           <div class="contact__socials">
-            <a href="https://instagram.com" target="_blank"
+            <!-- <a href="https://instagram.com" target="_blank"
               ><i class="bx bxl-instagram"></i
-            ></a>
+            ></a> -->
 
             <!-- <a href="https://twitter.com" target="_blank"
               ><i class="bx bxl-twitter"></i
@@ -52,7 +51,7 @@
               ><i class="bx bxl-linkedin-square"></i
             ></a> -->
 
-            <a href="https://youtube.com" target="_blank"><i class="bx bxl-youtube"></i></a>
+            <!-- <a href="https://youtube.com" target="_blank"><i class="bx bxl-youtube"></i></a> -->
           </div>
         </aside>
         <form
