--- a/Pages/wpu.html
+++ b/Pages/wpu.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="/Assets/CSS/Homepage.css">
     <link rel="stylesheet" href="/Assets/CSS/Template.css" />
     <script src="/JavaScript/include.js" defer></script>
-    <script src="/JavaScript/fadein.js" defer></script> 
+    <script src="/JavaScript/fadein.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="/JavaScript/scriptcopy.js" ></script> 
     <title>Why Pick Us? | Level Up Institute</title>
   </head>
 
@@ -19,6 +21,7 @@
     <div data-include="/Includes/nav.html"></div> 
 
     <section class="about__achievement">
+      <div id="animated-background"></div>
       <div class="about__achievements-right">
         <h2><span>Achievements</span></h2>
         <div class="achievements__cards">
