Updated legal pages

--- a/Pages/Legal/TermsofService.html
+++ b/Pages/Legal/TermsofService.html
@@ -46,7 +46,7 @@
                 <p>Your access to and use of the Service is conditioned on your acceptance of and compliance with these Terms and Conditions. These Terms and Conditions apply to all visitors, users, and others who access or use the Service.</p>
                 <p>By accessing or using the Service, you agree to be bound by these Terms and Conditions. If you disagree with any part of these Terms and Conditions, you may not access the Service.</p>
                 <p>You represent that you are over the age of 18. The Company does not permit those under 18 to use the Service.</p>
-                <p>Your access to and use of the Service is also conditioned on your acceptance of and compliance with the Privacy Policy of the Company. Our Privacy Policy describes our policies and procedures on the collection, use, and disclosure of your personal information when you use the Application or the Website and tells you about your privacy rights and how the law protects you. Please read our Privacy Policy carefully before using our Service.</p>
+                <p>Your access to and use of the Service is also conditioned on your acceptance of and compliance with the <a href="/Pages/Legal/privacypolicy.html">Privacy Policy</a>. Our Privacy Policy describes our policies and procedures on the collection, use, and disclosure of your personal information when you use the Application or the Website and tells you about your privacy rights and how the law protects you. Please read our Privacy Policy carefully before using our Service.</p>
                 
                 <h2>4. User Obligations</h2>
                 <p>When using our Service, you agree to:</p>
