--- a/Pages/Legal/privacypolicy.html
+++ b/Pages/Legal/privacypolicy.html
@@ -150,6 +150,8 @@
                 <li><strong>With other users:</strong> when You share personal information or otherwise interact in the public areas with other users, such information may be viewed by all users and may be publicly distributed outside.</li>
                 <li><strong>With Your consent</strong>: We may disclose Your personal information for any other purpose with Your consent.</li>
                 </ul>
+                <h3>Communications</h3>
+                <p>Depending on whether You have signed up for our newsletters or other communications, we may use Your email address to send You weekly updates about the website’s activities, news, and other relevant information. You can opt out of these communications at any time by following the unsubscribe instructions provided in each email.</p>
                 <h3>Retention of Your Personal Data</h3>
                 <p>The Company will retain Your Personal Data only for as long as is necessary for the purposes set out in this Privacy Policy. We will retain and use Your Personal Data to the extent necessary to comply with our legal obligations (for example, if we are required to retain your data to comply with applicable laws), resolve disputes, and enforce our legal agreements and policies.</p>
                 <p>The Company will also retain Usage Data for internal analysis purposes. Usage Data is generally retained for a shorter period of time, except when this data is used to strengthen the security or to improve the functionality of Our Service, or We are legally obligated to retain this data for longer time periods.</p>
