--- a/Pages/Legal/privacypolicy.html
+++ b/Pages/Legal/privacypolicy.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/Assets/CSS/Template.css" />
         <link rel="stylesheet" href="/Assets/CSS/attributions.css" />
         <script src="/JavaScript/include.js" defer></script> 
-        <title>Attributions | Level Up Institute</title>
+        <title>Privacy Policy | Level Up Institute</title>
     </head>
     <body>
         <div data-include="/Includes/nav.html"></div>
