Made changes to the attributions page

--- a/Pages/attributions.html
+++ b/Pages/attributions.html
@@ -39,8 +39,8 @@
             <p><a href="https://www.freepik.com/free-vector/students-wearing-new-clothes-big-backpack-books-pencil-back-school-outfits-trends-new-school-year-fashion-first-day-school-clothes_12085830.htm#fromView=author&page=1&position=2&uuid=545ffade-0541-400e-9a61-7d4b721b17d2">Image by vectorjuice on Freepik</a></p>
             <h4>FAQS</h4>
             <p><a href="https://www.freepik.com/free-vector/self-management-life-coaching-man-doubting-questioning-brainstorming-identity-crisis-delirium-mental-confusion-confused-feelings-concept-pinkish-coral-bluevector-isolated-illustration_11664272.htm#query=faq&position=3&from_view=author&uuid=44056920-2a02-462f-a552-08bc20fd1c2b">Image by vectorjuice on Freepik</a></p>
-            <h4>Work with Us</h4>
-            <p>Header Image: Photo by <a href="https://unsplash.com/@homajob?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Scott Graham</a> on <a href="https://unsplash.com/photos/person-holding-pencil-near-laptop-computer-5fNmWej4tAA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>      
+            <!-- <h4>Work with Us</h4>
+            <p>Header Image: Photo by <a href="https://unsplash.com/@homajob?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Scott Graham</a> on <a href="https://unsplash.com/photos/person-holding-pencil-near-laptop-computer-5fNmWej4tAA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>       -->
             </article>
         </div>
 
