--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <base href="/Grinds-Website/">
     <link rel="stylesheet" href="/Assets/CSS/Template.css" />
     <link rel="stylesheet" href="/Assets/CSS/Homepage.css" />
     <link rel="stylesheet" href="/Assets/CSS/fade.css">
