--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       rel="stylesheet"
     />
     <base href="/Grinds-Website">
-    <link rel="stylesheet" href="/Assets/CSS/Template.css" />
-    <link rel="stylesheet" href="/Assets/CSS/Homepage.css" />
-    <link rel="stylesheet" href="/Assets/CSS/fade.css">
+    <link rel="stylesheet" href="/Grinds-Website/Assets/CSS/Template.css" />
+    <link rel="stylesheet" href="/Grinds-Website/Assets/CSS/Homepage.css" />
+    <link rel="stylesheet" href="/Grinds-Website/Assets/CSS/fade.css">
     <script src="/JavaScript/include.js" defer></script> 
   <!-- defer ensures the script is executed after the HTML doc is parsed by the web browser -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
