Fixing CSS and HTML pages issues

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <base href="/Grinds-Website/">
-    <link rel="stylesheet" href="Assets/CSS/Template.css" />
-    <link rel="stylesheet" href="Assets/CSS/Homepage.css" />
-    <link rel="stylesheet" href="Assets/CSS/fade.css">
+    <base href="/Grinds-Website">
+    <link rel="stylesheet" href="/Assets/CSS/Template.css" />
+    <link rel="stylesheet" href="/Assets/CSS/Homepage.css" />
+    <link rel="stylesheet" href="/Assets/CSS/fade.css">
     <script src="/JavaScript/include.js" defer></script> 
   <!-- defer ensures the script is executed after the HTML doc is parsed by the web browser -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
