Fixing CSS and HTML pages issues

--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
   </head>
 
   <body>
+    <base href="/Grinds-Website">
     <div data-include="/Includes/nav.html"></div>
-
     <header>
+      <base href="/Grinds-Website">
       <div id="animated-background"></div>
       <div class="header-content">
         <div class="container__left">
@@ -57,6 +58,7 @@
     </header>
 
     <section class="team">
+      <base href="/Grinds-Website">
       <h2><span>Meet the Tutors!</span></h2>
       <div class="container_team__container">
         <article class="team__member">
@@ -103,6 +105,7 @@
     </section>
 
     <div class="content">
+      <base href="/Grinds-Website">
       <div class="separator">
         <h2><span>Student Reviews & Recommendations</span></h2>
         <a href="/Pages/ReviewsRecom.html"
@@ -378,8 +381,8 @@
         </div>
       </div>
     </div>
-
     <div data-include="/Includes/Footer.html"></div>
   </body>
+  <base href="/Grinds-Website">
   <script src="/JavaScript/fadein.js"></script>
 </html>
