Fixing CSS and HTML pages issues

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <base href="/Grinds-Website">
+  <!-- <base href="/Grinds-Website"> -->
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,7 +8,6 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <base href="/Grinds-Website">
     <link rel="stylesheet" href="/Assets/CSS/Template.css" />
     <link rel="stylesheet" href="/Assets/CSS/Homepage.css" />
     <link rel="stylesheet" href="/Assets/CSS/fade.css">
@@ -21,10 +20,8 @@
   </head>
 
   <body>
-    <base href="/Grinds-Website">
     <div data-include="/Includes/nav.html"></div>
     <header>
-      <base href="/Grinds-Website">
       <div id="animated-background"></div>
       <div class="header-content">
         <div class="container__left">
@@ -58,7 +55,6 @@
     </header>
 
     <section class="team">
-      <base href="/Grinds-Website">
       <h2><span>Meet the Tutors!</span></h2>
       <div class="container_team__container">
         <article class="team__member">
@@ -105,7 +101,6 @@
     </section>
 
     <div class="content">
-      <base href="/Grinds-Website">
       <div class="separator">
         <h2><span>Student Reviews & Recommendations</span></h2>
         <a href="/Pages/ReviewsRecom.html"
@@ -383,6 +378,5 @@
     </div>
     <div data-include="/Includes/Footer.html"></div>
   </body>
-  <base href="/Grinds-Website">
   <script src="/JavaScript/fadein.js"></script>
 </html>
