finalising webpage for deployment to the internet

--- a/Pages/Blog Pages/Landing Page.html
+++ b/Pages/Blog Pages/Landing Page.html
@@ -21,7 +21,7 @@
       <div class="content">
         <div class="separator">
           <h2>All of Our Blogs (Coming Soon)</h2>
-          <a href="/Pages/index.html"
+          <a href="/index.html"
           ><i class="bx bx-chevron-left"></i
             > Go Back</a>
         </div>
