--- a/Pages/Courses.html
+++ b/Pages/Courses.html
@@ -17,7 +17,7 @@
     <div class="content">
       <div class="separator2">
         <h2><span>All Courses (Coming Soon)</span></h2>
-        <a href="/Pages/index.html"
+        <a href="/index.html"
           ><i class="bx bx-chevron-left"></i
         >Go Back</a>
       </div>
