Cleaned up file structure, added a review. Cleaned up CSS file for wpu page.

--- a/Pages/Blog Pages/Landing Page.html
+++ b/Pages/Blog Pages/Landing Page.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/Assets/CSS/Template.css" />
     <link rel="stylesheet" href="/Assets/CSS/Homepage.css" /><script src="/JavaScript/include.js" defer></script> 
     <script src="/JavaScript/include.js" defer></script> 
-    <title>Blog | Level Up Institute</title>
+    <title>Read Our Blog | Level Up Science Hub</title>
   </head>
 
 
