--- a/Pages/Blog Pages/Study Tips.html
+++ b/Pages/Blog Pages/Study Tips.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
     />
-    <title>Blog Page</title>
+    <title>Blog | Study Tips | Level Up Science Hub</title>
   </head>
  
   <body>
