--- a/Pages/Contact Us.html
+++ b/Pages/Contact Us.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/Assets/CSS/ContactUs.css" />
     <link rel="stylesheet" href="/Assets/CSS/Template.css" />
     <script src="/JavaScript/include.js" defer></script>
-    <title>Contact Us | Level Up Institute</title>
+    <title>Contact Us | Level Up Science Hub</title>
   </head>
 
   <body>
