--- a/Pages/Courses.html
+++ b/Pages/Courses.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/Assets/CSS/Homepage.css" />
     <link rel="stylesheet" href="/Assets/CSS/Template.css" />
     <script src="/JavaScript/include.js" defer></script>
-    <title>Courses | Level Up Institute</title>
+    <title>Courses | Level Up Science Hub</title>
   </head>
   <body>
     <div data-include="/Includes/nav.html"></div>
