--- a/Pages/Login Page/login.html
+++ b/Pages/Login Page/login.html
@@ -9,7 +9,7 @@
     />
     <link rel="stylesheet" href="/Assets/CSS/Template.css" />
     <link rel="stylesheet" href="/Pages/Login Page/login.css" />
-    <title>Login | Level Up Institute</title>
+    <title>Login | Level Up Science Hub</title>
   </head>
 
   <body>
