--- a/Pages/ReviewsRecom.html
+++ b/Pages/ReviewsRecom.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/Assets/CSS/Template.css" />
     <link rel="stylesheet" href="/Assets/CSS/Homepage.css" />
     <script src="/JavaScript/include.js" defer></script>
-    <title>Reviews | Level Up Institute</title>
+    <title>Reviews & Recommendations | Level Up Science Hub</title>
   </head>
   <body>
     <div data-include="/Includes/nav.html"></div>
@@ -22,8 +22,7 @@
       </div>
       <div class="hear">
         <h5>
-          <span>Hear what Students Say About Us! </span>Also you can contact us
-          for more info!
+          <span>Hear what Students Say About Us! </span>
         </h5>
       </div>
 
@@ -103,6 +102,20 @@
             <h5>Luke  - LC HL Student</h5>
             <p>
               Eóghan was a great teacher who helped me greatly in HL maths. In the space of a month I went from badly failing, to a h5 standard. He was very clear when explaining everything and extremely helpful.
+            </p>
+            <div class="rating">
+              <!-- Five stars -->
+              <span class="star active"></span>
+              <span class="star active"></span>
+              <span class="star active"></span>
+              <span class="star active"></span>
+              <span class="star active"></span>
+            </div>
+          </div>
+          <div class="item">
+            <h5>Fiona, Mother of Michael - JC HL Student</h5>
+            <p>
+              Excellent at explaining & patient.
             </p>
             <div class="rating">
               <!-- Five stars -->
