--- a/Pages/bookagrind.html
+++ b/Pages/bookagrind.html
@@ -9,10 +9,10 @@
     />
     <link rel="stylesheet" href="/Assets/CSS/Template.css" />
     <link rel="stylesheet" href="/Assets/CSS/Homepage.css">
-    <link rel="stylesheet" href="/Assets/CSS/book.css">
+    <link rel="stylesheet" href="/Assets/CSS/bookagrind.css">
     <script src="/JavaScript/include.js" defer></script>
     <script src="/JavaScript/fadein.js" defer></script>
-    <title>Meet Eóghan | Level Up Institute</title>
+    <title>Meet Eóghan | Level Up Science Hub</title>
   </head>
 
   <body>
@@ -21,10 +21,10 @@
     <h2><span>Meet Eóghan - Maths and Physics Tutor!</span></h2>
     <div class="aboutme">
       <div class="information">
-          <p class="center">Hey, I am Eóghan 👋</p>
-          <p>I am a 20 year old Physics Student, who has been tutoring for a year now in <span>Maths</span> and <span>Physics</span>. I started tutoring and giving grinds as I really wanted to help people of all levels in Maths and Science to improve and realise their potential.</p>
-          <p>I am a very patient person who is organised and motivated. I also have a strong sense of adaptability, allowing me to tailor my teaching approach to suit the unique needs and learning styles of each student.</p>
-          <p>My goal is to gear my students towards being the best that they can be and help them achieve their goal whatever it may be in their respective exams.</p>
+          <p class="center">Hi, I am Eóghan 👋</p>
+          <p>I am a 21 year old Physics Student, who has been tutoring for a year now. I started tutoring and giving grinds as I really wanted to help people of all levels in Maths and Science to realise their potential and improve.</p>
+          <p>I am a very patient person who is organised and motivated. I have a strong sense of adaptability, allowing me to tailor my teaching approach to suit the unique needs and learning styles of each student.</p>
+          <p>My goal is to gear my students towards being the best that they can be and help them achieve their goal, whatever it may be, in their respective exams.</p>
       </div>
       <div class="about">
         <img src="/Assets/Images/UCD Entrance Scholar Pic.jpeg" alt="">
