--- a/Pages/congrind.html
+++ b/Pages/congrind.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/Assets/CSS/Template.css" />
     <link rel="stylesheet" href="/Assets/CSS/congrind.css">
     <script src="/JavaScript/include.js" defer></script>
-    <title>Book a Grind | Level Up Institute</title>
+    <title>Book a Grind | Level Up Science Hub</title>
   </head>
 
   <body>
