--- a/Pages/workwithus.html
+++ b/Pages/workwithus.html
@@ -10,7 +10,7 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
     />
     <script src="/JavaScript/include.js" defer></script>
-    <title>Blog Page</title>
+    <title>Work with us | Level Up Science Hub</title>
   </head>
   <body>
     <div data-include="/Includes/nav.html"></div>
