--- a/Pages/wpu.html
+++ b/Pages/wpu.html
@@ -7,14 +7,13 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/Assets/CSS/AboutUs.css" />
-    <link rel="stylesheet" href="/Assets/CSS/Homepage.css">
+    <link rel="stylesheet" href="/Assets/CSS/whypickus.css" />
     <link rel="stylesheet" href="/Assets/CSS/Template.css" />
     <script src="/JavaScript/include.js" defer></script>
     <script src="/JavaScript/fadein.js" defer></script>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="/JavaScript/scriptcopy.js" ></script> 
-    <title>Why Pick Us? | Level Up Institute</title>
+    <script src="/JavaScript/wpuparticlescript.js" ></script> 
+    <title>Why Pick Us? | Level Up Science Hub</title>
   </head>
 
   <body>
