--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <!-- Include your custom script -->
     <script src="/JavaScript/script.js"></script>
-    <title>Home | Level Up Institute</title>
+    <title>Home | Level Up Science Hub</title>
   </head>
 
   <body>
@@ -109,15 +109,14 @@
       </div>
       <div class="hear">
         <h5>
-          <span>Hear what Students Say About Us! </span>Also you can contact us
-          for more info!
+          <span>Hear what Students Say About Us! </span>
         </h5>
       </div>
 
       <div class="comments">
         <div class="right">
           <div class="item">
-            <h5>Alison - Mother of Hannah, JC OL Student</h5>
+            <h5>Alison - Mother of Hannah - JC OL Student</h5>
             <p>
               Eóghan has been so helpful in helping my Hannah to achieve better
               grades in Maths. Hannah has gone from failing maths to getting an
@@ -190,6 +189,20 @@
             <h5>Luke - LC HL Student</h5>
             <p>
               Eóghan was a great teacher who helped me greatly in HL maths. In the space of a month I went from badly failing, to a h5 standard. He was very clear when explaining everything and extremely helpful.
+            </p>
+            <div class="rating">
+              <!-- Five stars -->
+              <span class="star active"></span>
+              <span class="star active"></span>
+              <span class="star active"></span>
+              <span class="star active"></span>
+              <span class="star active"></span>
+            </div>
+          </div>
+          <div class="item">
+            <h5>Fiona, Mother of Michael - JC HL Student</h5>
+            <p>
+              Excellent at explaining & patient.
             </p>
             <div class="rating">
               <!-- Five stars -->
@@ -306,8 +319,8 @@
         <div class="item">
           <div class="top">
             <video id="scroll-video" autoplay loop muted>
-              <source src="/Assets/Videos/Launching Soon(1).mp4" type="video/mp4">
-              Your browser does not support this type of video tag
+              <source src="/Assets/Videos/Launching_Soon_homepage.mp4" type="video/mp4">
+              Your browser does not support this type of video tag.
             </video>
           </div>
           <!-- <div class="bottom">
