--- a/Pages/Aboutus.html
+++ b/Pages/Aboutus.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/Assets/CSS/Template.css" />
     <script src="/JavaScript/include.js" defer></script>
     <script src="/JavaScript/fadein.js" defer></script>
-    <title>About Us | Level Up Institute</title>
+    <title>About Us | Level Up Science Hub</title>
   </head>
 
   <body>
