changed CSS media

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="info">
             <h1>Learn <span id="dynamictext">Maths</span> Easier with Level Up</h1>
             <script src="/JavaScript/alttext.js"></script>
-            <p>Success Awaits</p>
+            <p>Success Awaits!</p>
           </div>
           <div class="image">
             <img src="/Assets/Images/3d-student-graduation-cap-books-stack.png" />
