More Media CSS Changes

--- a/Pages/Blog Pages/Landing Page.html
+++ b/Pages/Blog Pages/Landing Page.html
@@ -20,7 +20,7 @@
 
       <div class="content">
         <div class="separator">
-          <h2>All of Our Blogs (Coming Soon)</h2>
+          <h2>All Blog Posts</h2>
           <a href="/index.html"
           ><i class="bx bx-chevron-left"></i
             > Go Back</a>
