--- a/Pages/ReviewsRecom.html
+++ b/Pages/ReviewsRecom.html
@@ -17,8 +17,8 @@
 
     <div class="content">
       <div class="separator">
-        <h2><span>Student Reviews & Recommendations</span></h2>
-        <!-- <a href="/Pages/index.html"><i class="bx bx-chevron-left"></i>Go Back</a> -->
+        <h2><span>Student Reviews</span></h2>
+        <a href="/index.html"><i class="bx bx-chevron-left"></i>Go Back</a>
       </div>
       <div class="hear">
         <h5>
