--- a/Pages/bookagrind.html
+++ b/Pages/bookagrind.html
@@ -24,7 +24,8 @@
           <p class="center">Hi, I am Eóghan 👋</p>
           <p>I am a 21 year old Physics Student, who has been tutoring for a year now. I started tutoring and giving grinds as I really wanted to help people of all levels in Maths and Science to realise their potential and improve.</p>
           <p>I am a very patient person who is organised and motivated. I have a strong sense of adaptability, allowing me to tailor my teaching approach to suit the unique needs and learning styles of each student.</p>
-          <p>My goal is to gear my students towards being the best that they can be and help them achieve their goal, whatever it may be, in their respective exams.</p>
+          <p class="bottompara">My goal is to gear my students towards being the best that they can be and help them achieve their goal, whatever it may be, in their respective exams.</p>
+          <a href="https://www.linkedin.com/in/e%C3%B3ghan-murphy-042b29274/"><i class="bx bxl-linkedin-square"></i></a>
       </div>
       <div class="about">
         <img src="/Assets/Images/UCD Entrance Scholar Pic.jpeg" alt="">
