--- a/Pages/wpu.html
+++ b/Pages/wpu.html
@@ -22,7 +22,7 @@
     <section class="about__achievement">
       <div id="animated-background"></div>
       <div class="about__achievements-right">
-        <h2><span>Achievements</span></h2>
+        <h2><span>Why Pick Us?</span></h2>
         <div class="achievements__cards">
           <article class="achievement__card1">
             <span class="achievement__icon">
@@ -63,7 +63,7 @@
     </section>
 
     <section class="team">
-      <h2><span>Meet the Tutors!</span></h2>
+      <h2><span>More about our Tutors!</span></h2>
       <div class="container_team__container">
         <article class="team__member">
           <a href="/Pages/bookagrind.html">
