--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <div class="content">
       <div class="separator">
-        <h2><span>Student Reviews & Recommendations</span></h2>
+        <h2><span>Student Reviews</span></h2>
         <a href="/Pages/ReviewsRecom.html"
           >See all <i class="bx bx-chevron-right"></i
         ></a>
@@ -217,7 +217,7 @@
       </div>
 
       <div class="separator">
-        <h2>Courses (Coming Soon)</h2>
+        <h2>Courses</h2>
         <a href="/Pages/Courses.html"
           >See all <i class="bx bx-chevron-right"></i
         ></a>
@@ -312,7 +312,7 @@
 
       <div class="separator">
         <h2>Follow us on Youtube</h2>
-        <a href="#">Our Channel!<i class="bx bxl-youtube"></i></a>
+        <a href="#">Our Channel<i class="bx bxl-youtube"></i></a>
       </div>
 
       <div class="videos">
@@ -331,7 +331,7 @@
       <script src="/JavaScript/Video.js"></script>
 
       <div class="separator">
-        <h2>Read Our Blog (Coming Soon)</h2>
+        <h2>Read Our Blog</h2>
         <a href="/Pages/Blog Pages/Landing Page.html"
           >See all <i class="bx bx-chevron-right"></i
         ></a>
@@ -383,7 +383,7 @@
           <div class="bottom">
             <h5><span>Science Based</span> Tips</h5>
             <a href="#"
-              >Read More <i class="bx bx-chevron-right"></i
+              >Coming Soon.... <i class="bx bx-chevron-right"></i
             ></a>
           </div>
         </div>
