fixed buttons and wpu page again

--- a/Pages/wpu.html
+++ b/Pages/wpu.html
@@ -54,7 +54,7 @@
         </div>
         <div class="studentreviews">
           <a class="link-with-icon" href="/Pages/ReviewsRecom.html"
-            >See Our Reviews and Recommendations
+            >See Our Reviews & Recommendations
             <i class="bx bx-chevron-right"></i
           ></a>
           <a href="/Pages/congrind.html">Book a Grind Now!</a>
