--- a/Pages/Aboutus.html
+++ b/Pages/Aboutus.html
@@ -36,7 +36,7 @@
           
           <div class="studentreviews">
             <a class="link-with-icon" href="/Pages/ReviewsRecom.html"
-              >See Our Reviews and Recommendations
+              >See Our Reviews
               <i class="bx bx-chevron-right"></i
             ></a>
             <a href="/Pages/congrind.html">Book a Grind Now!</a>
