Fixed new email address & edited titles on some pages

--- a/Pages/Aboutus.html
+++ b/Pages/Aboutus.html
@@ -47,7 +47,7 @@
     </section>
 
     <section class="team">
-      <h2><span>Meet the Tutors!</span></h2>
+      <h2><span>Meet the Tutor!</span></h2>
       <div class="container_team__container">
         <article class="team__member">
           <a href="/Pages/bookagrind.html">
