--- a/Pages/Contact Us.html
+++ b/Pages/Contact Us.html
@@ -31,8 +31,8 @@
               <i class="bx bxs-phone"></i>
               <h5>+353 851193536</h5>
             </li> -->
-            <li>
-              <i class="bx bx-envelope"></i><h5>eoghanmurphy24@proton.me</h5>
+            <li class="email">
+              <i class="bx bx-envelope"></i><a href="mailto:levelupsciencehub@gmail.com">levelupsciencehub@gmail.com</a>
             </li>
             <li>
               <i class="bx bx-map"></i> <h5>Blessington, Wicklow, Ireland.</h5>
