--- a/Pages/Legal/TermsofService.html
+++ b/Pages/Legal/TermsofService.html
@@ -140,7 +140,7 @@
                 <h2>21. Contact Us</h2>
                 <p>If you have any questions about these Terms and Conditions, you can contact us:</p>
                 <ul>
-                    <li>By email: <a href="mailto:eoghanmurphy24@proton.me">eoghanmurphy24@proton.me</a></li>
+                    <li>By email: <a href="mailto:levelupsciencehub@gmail.com">levelupsciencehub@gmail.com</a></li>
                 </ul>
             </article>
         </div>
