--- a/Pages/Legal/cookies.html
+++ b/Pages/Legal/cookies.html
@@ -75,7 +75,7 @@
                 <h3>Contact Us</h3>
                 <p>If you have any questions about this Cookies Policy, You can contact us:</p>
                 <ul>
-                <li>By email: eoghanmurphy24@proton.me</li>
+                    <li>By email: <a href="mailto:levelupsciencehub@gmail.com">levelupsciencehub@gmail.com</a></li>
                 </ul>
             </article>
         </div>
