--- a/Pages/Legal/privacypolicy.html
+++ b/Pages/Legal/privacypolicy.html
@@ -193,7 +193,7 @@
                 <h2>Contact Us</h2>
                 <p>If you have any questions about this Privacy Policy, You can contact us:</p>
                 <ul>
-                <li>By email: eoghanmurphy24@proton.me</li>
+                    <li>By email: <a href="mailto:levelupsciencehub@gmail.com">levelupsciencehub@gmail.com</a></li>
                 </ul>
             </article>
         </div>
