--- a/Pages/bookagrind.html
+++ b/Pages/bookagrind.html
@@ -31,7 +31,7 @@
         <img src="/Assets/Images/UCD Entrance Scholar Pic.jpeg" alt="">
       </div>
     </div>
-    <h2 class="g"><span>But, how are the Grinds Structured?</span></h2>
+    <h2 class="g"><span>But, How are the Grinds Structured?</span></h2>
     <div class="aboutgrinds">
       <div class="information">
         <ul>
@@ -52,7 +52,7 @@
     </div>
     <div class="studentreviews">
       <a class="link-with-icon" href="/Pages/ReviewsRecom.html"
-        >See Our Reviews and Recommendations
+        >See Our Reviews & Recommendations
         <i class="bx bx-chevron-right"></i
       ></a>
       <a href="/Pages/congrind.html">Book a Grind Now!</a>
